--- a/src/Dyflissu.Backend/Dyflissu.Backend.csproj
+++ b/src/Dyflissu.Backend/Dyflissu.Backend.csproj
@@ -1,17 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
-
-    <ItemGroup>
-        <Folder Include="wwwroot\" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
-        <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
-    </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Dyflissu.Shared\Dyflissu.Shared.csproj" />
