--- a/src/Dyflissu.DesktopGL/Dyflissu.DesktopGL.csproj
+++ b/src/Dyflissu.DesktopGL/Dyflissu.DesktopGL.csproj
@@ -10,6 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="Lidgren.Network" Version="1.0.2" />
         <PackageReference Include="MonoGame.Content.Builder" Version="3.7.0.4" />
         <PackageReference Include="MonoGame.Framework.DesktopGL.Core" Version="3.7.0.7" />
     </ItemGroup>
