Add primitives and physics project
I decided to make own primitives classes to be independent from monogame (in case i would like to move to unity3d)

--- a/src/Dyflissu.DesktopGL/Dyflissu.DesktopGL.csproj
+++ b/src/Dyflissu.DesktopGL/Dyflissu.DesktopGL.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Dyflissu.Physics\Dyflissu.Physics.csproj" />
       <ProjectReference Include="..\Dyflissu.Shared\Dyflissu.Shared.csproj" />
     </ItemGroup>
 
