Add basic configurations

--- a/src/Dyflissu.Backend/Dyflissu.Backend.csproj
+++ b/src/Dyflissu.Backend/Dyflissu.Backend.csproj
@@ -10,4 +10,10 @@
       <ProjectReference Include="..\Dyflissu.Shared\Dyflissu.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="Dyflissu.Server.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
