Setup basic game loop

--- a/src/Dyflissu.Backend/Dyflissu.Backend.csproj
+++ b/src/Dyflissu.Backend/Dyflissu.Backend.csproj
@@ -14,6 +14,13 @@
       <None Update="Dyflissu.Server.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="NLog" Version="4.6.3" />
     </ItemGroup>
 
 </Project>
